--- a/package.json
+++ b/package.json
@@ -10,22 +10,34 @@
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-navigation/native": "^7.1.6",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/react": "^18.3.20",
+    "@types/react-native": "^0.73.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
+    "expo-notifications": "^0.29.14",
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-calendars": "^1.1311.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-paper": "^5.13.4",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
