--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "react-native": "0.76.3",
     "react-native-calendars": "^1.1311.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.13.4",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-share": "^12.0.9",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
